--- a/index.html
+++ b/index.html
@@ -72,31 +72,6 @@
             <li><a href="about.html">About</a></li>
             <li><a href="services.html">Services</a></li>
             <li><a href="pricing.html">Pricing</a></li>
-            <li class="dropdown">
-              <a href="#"
-                ><span>Drop Down</span>
-                <i class="bi bi-chevron-down dropdown-indicator"></i
-              ></a>
-              <ul>
-                <li><a href="#">Drop Down 1</a></li>
-                <li class="dropdown">
-                  <a href="#"
-                    ><span>Deep Drop Down</span>
-                    <i class="bi bi-chevron-down dropdown-indicator"></i
-                  ></a>
-                  <ul>
-                    <li><a href="#">Deep Drop Down 1</a></li>
-                    <li><a href="#">Deep Drop Down 2</a></li>
-                    <li><a href="#">Deep Drop Down 3</a></li>
-                    <li><a href="#">Deep Drop Down 4</a></li>
-                    <li><a href="#">Deep Drop Down 5</a></li>
-                  </ul>
-                </li>
-                <li><a href="#">Drop Down 2</a></li>
-                <li><a href="#">Drop Down 3</a></li>
-                <li><a href="#">Drop Down 4</a></li>
-              </ul>
-            </li>
             <li><a href="contact.html">Contact</a></li>
             <li>
               <a class="get-a-quote" href="get-a-quote.html">Get a Quote</a>
@@ -126,21 +101,6 @@
               that we remain proactive and achieve our intended goals and
               objectives.
             </p>
-
-            <form
-              action="#"
-              class="form-search d-flex align-items-stretch mb-3"
-              data-aos="fade-up"
-              data-aos-delay="200"
-            >
-              <input
-                type="text"
-                class="form-control"
-                placeholder="ZIP code or CitY"
-              />
-              <button type="submit" class="btn btn-primary">Search</button>
-            </form>
-
             <div class="row gy-4" data-aos="fade-up" data-aos-delay="400">
               <div class="col-lg-3 col-6">
                 <div class="stats-item text-center w-100 h-100">
@@ -291,10 +251,8 @@
             <div class="col-lg-6 content order-last order-lg-first">
               <h3>About Us</h3>
               <p>
-                Dolor iure expedita id fuga asperiores qui sunt consequatur
-                minima. Quidem voluptas deleniti. Sit quia molestiae quia quas
-                qui magnam itaque veritatis dolores. Corrupti totam ut eius
-                incidunt reiciendis veritatis asperiores placeat.
+                We are a start-up company providing transportation services to the public through subscriptions method basis. Our aim is to grow and provide our services national wide and expand into SADC countries.
+
               </p>
               <ul>
                 <li data-aos="fade-up" data-aos-delay="100">
